Modify some views

--- a/test-reverse-engineer/Views/Assigns/Edit.cshtml
+++ b/test-reverse-engineer/Views/Assigns/Edit.cshtml
@@ -28,7 +28,7 @@
                 <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
                 <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="AssignCreatedDate" class="control-label"></label>
                 <input asp-for="AssignCreatedDate" class="form-control" />
                 <span asp-validation-for="AssignCreatedDate" class="text-danger"></span>
@@ -37,7 +37,7 @@
                 <label asp-for="AssignModifiedDate" class="control-label"></label>
                 <input asp-for="AssignModifiedDate" class="form-control" />
                 <span asp-validation-for="AssignModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
