--- a/test-reverse-engineer/Views/Assigns/Index.cshtml
+++ b/test-reverse-engineer/Views/Assigns/Index.cshtml
@@ -13,10 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.AssignCreatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AssignModifiedDate)
+                @Html.DisplayNameFor(model => model.AssignId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Project)
@@ -27,6 +24,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.User)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AssignCreatedDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AssignModifiedDate)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -34,10 +37,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.AssignCreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AssignModifiedDate)
+                @Html.DisplayFor(modelItem => item.AssignId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Project.ProjectId)
@@ -47,6 +47,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.User.UserId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AssignCreatedDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AssignModifiedDate)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.AssignId">Edit</a> |
