--- a/test-reverse-engineer/Views/Permissions/Create.cshtml
+++ b/test-reverse-engineer/Views/Permissions/Create.cshtml
@@ -17,7 +17,7 @@
                 <input asp-for="PermissionName" class="form-control" />
                 <span asp-validation-for="PermissionName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="PermissionCreatedDate" class="control-label"></label>
                 <input asp-for="PermissionCreatedDate" class="form-control" />
                 <span asp-validation-for="PermissionCreatedDate" class="text-danger"></span>
@@ -26,7 +26,7 @@
                 <label asp-for="PermissionModifiedDate" class="control-label"></label>
                 <input asp-for="PermissionModifiedDate" class="form-control" />
                 <span asp-validation-for="PermissionModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
