--- a/test-reverse-engineer/Views/RoleHasPermissions/Create.cshtml
+++ b/test-reverse-engineer/Views/RoleHasPermissions/Create.cshtml
@@ -20,7 +20,7 @@
                 <label asp-for="PermissionId" class="control-label"></label>
                 <select asp-for="PermissionId" class ="form-control" asp-items="ViewBag.PermissionId"></select>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="RhpCreatedDate" class="control-label"></label>
                 <input asp-for="RhpCreatedDate" class="form-control" />
                 <span asp-validation-for="RhpCreatedDate" class="text-danger"></span>
@@ -29,7 +29,7 @@
                 <label asp-for="RhpModifiedDate" class="control-label"></label>
                 <input asp-for="RhpModifiedDate" class="form-control" />
                 <span asp-validation-for="RhpModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
