--- a/test-reverse-engineer/Views/RoleHasPermissions/Edit.cshtml
+++ b/test-reverse-engineer/Views/RoleHasPermissions/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="RhpId" />
             <input type="hidden" asp-for="RoleId" />
             <input type="hidden" asp-for="PermissionId" />
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="RhpCreatedDate" class="control-label"></label>
                 <input asp-for="RhpCreatedDate" class="form-control" />
                 <span asp-validation-for="RhpCreatedDate" class="text-danger"></span>
@@ -24,7 +24,7 @@
                 <label asp-for="RhpModifiedDate" class="control-label"></label>
                 <input asp-for="RhpModifiedDate" class="form-control" />
                 <span asp-validation-for="RhpModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
