--- a/test-reverse-engineer/Views/RoleHasPermissions/Index.cshtml
+++ b/test-reverse-engineer/Views/RoleHasPermissions/Index.cshtml
@@ -13,16 +13,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.RhpCreatedDate)
+                @Html.DisplayNameFor(model => model.RhpId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RhpModifiedDate)
+                @Html.DisplayNameFor(model => model.Role)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Permission)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Role)
+                @Html.DisplayNameFor(model => model.RhpCreatedDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RhpModifiedDate)
             </th>
             <th></th>
         </tr>
@@ -31,21 +34,24 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.RhpId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Role.RoleId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Permission.PermissionId)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.RhpCreatedDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RhpModifiedDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Permission.PermissionId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role.RoleId)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.RhpId }) |
+                @Html.ActionLink("Details", "Details", new { id=item.RhpId }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.RhpId })
             </td>
         </tr>
 }
