--- a/test-reverse-engineer/Views/Roles/Edit.cshtml
+++ b/test-reverse-engineer/Views/Roles/Edit.cshtml
@@ -18,7 +18,7 @@
                 <input asp-for="RoleName" class="form-control" />
                 <span asp-validation-for="RoleName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="RoleCreatedDate" class="control-label"></label>
                 <input asp-for="RoleCreatedDate" class="form-control" />
                 <span asp-validation-for="RoleCreatedDate" class="text-danger"></span>
@@ -27,7 +27,7 @@
                 <label asp-for="RoleModifiedDate" class="control-label"></label>
                 <input asp-for="RoleModifiedDate" class="form-control" />
                 <span asp-validation-for="RoleModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
