--- a/test-reverse-engineer/Views/Roles/Index.cshtml
+++ b/test-reverse-engineer/Views/Roles/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.RoleId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.RoleName)
             </th>
             <th>
@@ -27,6 +30,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.RoleId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RoleName)
             </td>
