--- a/test-reverse-engineer/Views/Assigns/Create.cshtml
+++ b/test-reverse-engineer/Views/Assigns/Create.cshtml
@@ -24,7 +24,7 @@
                 <label asp-for="ProjectId" class="control-label"></label>
                 <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="AssignCreatedDate" class="control-label"></label>
                 <input asp-for="AssignCreatedDate" class="form-control" />
                 <span asp-validation-for="AssignCreatedDate" class="text-danger"></span>
@@ -33,7 +33,7 @@
                 <label asp-for="AssignModifiedDate" class="control-label"></label>
                 <input asp-for="AssignModifiedDate" class="form-control" />
                 <span asp-validation-for="AssignModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
