--- a/test-reverse-engineer/Views/Documents/Index.cshtml
+++ b/test-reverse-engineer/Views/Documents/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.DocId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.DocName)
             </th>
             <th>
@@ -48,6 +51,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.DocId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DocName)
             </td>
