--- a/test-reverse-engineer/Views/Projects/Create.cshtml
+++ b/test-reverse-engineer/Views/Projects/Create.cshtml
@@ -48,7 +48,7 @@
                 <input asp-for="ProjectStatus" class="form-control" />
                 <span asp-validation-for="ProjectStatus" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="ProjectCreatedDate" class="control-label"></label>
                 <input asp-for="ProjectCreatedDate" class="form-control" />
                 <span asp-validation-for="ProjectCreatedDate" class="text-danger"></span>
@@ -57,7 +57,7 @@
                 <label asp-for="ProjectModifiedDate" class="control-label"></label>
                 <input asp-for="ProjectModifiedDate" class="form-control" />
                 <span asp-validation-for="ProjectModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
