--- a/test-reverse-engineer/Views/Projects/Edit.cshtml
+++ b/test-reverse-engineer/Views/Projects/Edit.cshtml
@@ -53,7 +53,7 @@
                 <input asp-for="ProjectStatus" class="form-control" />
                 <span asp-validation-for="ProjectStatus" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="ProjectCreatedDate" class="control-label"></label>
                 <input asp-for="ProjectCreatedDate" class="form-control" />
                 <span asp-validation-for="ProjectCreatedDate" class="text-danger"></span>
@@ -62,7 +62,7 @@
                 <label asp-for="ProjectModifiedDate" class="control-label"></label>
                 <input asp-for="ProjectModifiedDate" class="form-control" />
                 <span asp-validation-for="ProjectModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
