--- a/test-reverse-engineer/Views/Users/Create.cshtml
+++ b/test-reverse-engineer/Views/Users/Create.cshtml
@@ -27,7 +27,7 @@
                 <input asp-for="UserPassword" class="form-control" />
                 <span asp-validation-for="UserPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserStatus" class="control-label"></label>
                 <input asp-for="UserStatus" class="form-control" />
                 <span asp-validation-for="UserStatus" class="text-danger"></span>
@@ -41,7 +41,7 @@
                 <label asp-for="UserModifiedDate" class="control-label"></label>
                 <input asp-for="UserModifiedDate" class="form-control" />
                 <span asp-validation-for="UserModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
