--- a/test-reverse-engineer/Views/Users/Edit.cshtml
+++ b/test-reverse-engineer/Views/Users/Edit.cshtml
@@ -33,7 +33,7 @@
                 <input asp-for="UserStatus" class="form-control" />
                 <span asp-validation-for="UserStatus" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserCreatedDate" class="control-label"></label>
                 <input asp-for="UserCreatedDate" class="form-control" />
                 <span asp-validation-for="UserCreatedDate" class="text-danger"></span>
@@ -42,7 +42,7 @@
                 <label asp-for="UserModifiedDate" class="control-label"></label>
                 <input asp-for="UserModifiedDate" class="form-control" />
                 <span asp-validation-for="UserModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
