--- a/test-reverse-engineer/Views/Initiatives/Index.cshtml
+++ b/test-reverse-engineer/Views/Initiatives/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.InitiativeId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.InitiativeTitle)
             </th>
             <th>
@@ -90,6 +93,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.InitiativeId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.InitiativeTitle)
             </td>
