--- a/test-reverse-engineer/Views/Assigns/Index.cshtml
+++ b/test-reverse-engineer/Views/Assigns/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.AssignId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.AssignCreatedDate)
             </th>
             <th>
@@ -33,6 +36,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AssignId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.AssignCreatedDate)
             </td>
