--- a/test-reverse-engineer/Views/Categories/Edit.cshtml
+++ b/test-reverse-engineer/Views/Categories/Edit.cshtml
@@ -28,7 +28,7 @@
                 <input asp-for="FileStream" class="form-control" />
                 <span asp-validation-for="FileStream" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="CategoryCreatedDate" class="control-label"></label>
                 <input asp-for="CategoryCreatedDate" class="form-control" />
                 <span asp-validation-for="CategoryCreatedDate" class="text-danger"></span>
@@ -37,7 +37,7 @@
                 <label asp-for="CategoryModifiedDate" class="control-label"></label>
                 <input asp-for="CategoryModifiedDate" class="form-control" />
                 <span asp-validation-for="CategoryModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
