--- a/test-reverse-engineer/Views/Closings/Index.cshtml
+++ b/test-reverse-engineer/Views/Closings/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.ClosingId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ClosingLessonLearned)
             </th>
             <th>
@@ -24,6 +27,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ClosingId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ClosingLessonLearned)
             </td>
