--- a/test-reverse-engineer/Views/Documents/Create.cshtml
+++ b/test-reverse-engineer/Views/Documents/Create.cshtml
@@ -40,7 +40,7 @@
                 <input asp-for="DocStream" class="form-control" />
                 <span asp-validation-for="DocStream" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="DocCreatedDate" class="control-label"></label>
                 <input asp-for="DocCreatedDate" class="form-control" />
                 <span asp-validation-for="DocCreatedDate" class="text-danger"></span>
@@ -49,7 +49,7 @@
                 <label asp-for="DocModifiedDate" class="control-label"></label>
                 <input asp-for="DocModifiedDate" class="form-control" />
                 <span asp-validation-for="DocModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
