--- a/test-reverse-engineer/Views/RoleHasPermissions/Index.cshtml
+++ b/test-reverse-engineer/Views/RoleHasPermissions/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.RhpId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.RhpCreatedDate)
             </th>
             <th>
@@ -30,6 +33,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.RhpId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RhpCreatedDate)
             </td>
